# auto-denoise

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codemeta.json  duties.py  environment.yaml  gen_doc_stubs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
conda/: meta.yaml
config/: coverage.ini  ruff.toml
contributing/: index.html
credits/: index.html
docs/reference/: cli.md
docs/tutorials/: denoising.md  denoising_imgs.md  denoising_multichannel.md  denoising_spectra.md  models_io.md  noise2inverse.md  regularization.md
examples/: 01_camera.py  02_MS-D_vs_UNet.py  03_Noise2Inverse.ipynb  04_Comparison_3D.ipynb  05_XRF_Spectra_N2N.ipynb  05_xrf_spectra.csv  06_Regularization.ipynb  07_Comparison_RGB.ipynb  example_01_camera.py
license/: index.html
reference/SUMMARY/: index.html
reference/algorithms/: index.html
reference/autoden/: index.html
reference/autoden/algorithms/: index.html
reference/autoden/algorithms/deep_image_prior/: index.html
reference/autoden/algorithms/denoiser/: index.html
reference/autoden/algorithms/noise2noise/: index.html
reference/autoden/algorithms/noise2void/: index.html
reference/autoden/algorithms/supervised/: index.html
reference/autoden/cli/: index.html
reference/autoden/debug/: index.html
reference/autoden/io/: index.html
reference/autoden/losses/: index.html
reference/autoden/models/: index.html
reference/autoden/models/config/: index.html
reference/autoden/models/dncnn/: index.html
reference/autoden/models/io/: index.html
reference/autoden/models/msd/: index.html
reference/autoden/models/param_utils/: index.html
reference/autoden/models/resnet/: index.html
reference/autoden/models/unet/: index.html
reference/cli/: index.html
reference/datasets/: index.html
reference/losses/: index.html
reference/models/config/: index.html
reference/models/dncnn/: index.html
reference/models/msd/: index.html
reference/models/unet/: index.html
scripts/: gen_credits.py  make  multirun.sh  setup.sh
search/: search_index.json
src/autoden/: __init__.py  __main__.py  algorithms.py  cli.py  datasets.py  debug.py  io.py  losses.py
src/autoden/algorithms/: __init__.py  datasets.py  deep_image_prior.py  denoiser.py  noise2noise.py  noise2void.py  supervised.py
src/autoden/models/: __init__.py  config.py  dncnn.py  io.py  msd.py  param_utils.py  resnet.py  unet.py
src/autoden/transforms/: _wavelets.py
tests/: __init__.py  test_cli.py  test_losses.py
tests/algorithms/: mock_model.py  test_augmentation.py  test_deep_image_prior.py  test_denoiser.py  test_noise2noise.py  test_noise2void.py  test_supervised.py
tests/models/: test_dncnn.py  test_io.py  test_msd.py  test_resnet.py  test_unet.py
tests/transforms/: test_wavelets.py
tutorials/denoising/: index.html
tutorials/denoising_imgs/: index.html
tutorials/denoising_spectra/: index.html
tutorials/models_io/: index.html
tutorials/noise2inverse/: index.html
