[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "auto-denoise"
version = "0.1.0"
description = "Usupervised and self-supervised CNN denoising methods."
authors = ["Nicola VIGANO <nicola.vigano@cea.fr>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/CEA-MetroCarac/auto-denoise"
homepage = "https://github.com/CEA-MetroCarac/auto-denoise"
documentation = "https://CEA-MetroCarac.github.com.io/auto-denoise/"
keywords = []
packages = [ { include = "auto_denoise", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.dev-dependencies]
# formatting, quality, tests
autoflake = ">=1.4"
black = "*"
isort = "*"
pytest = "*"
types-toml = ">=0.10.1"

# tasks
duty = ">=0.6.0"
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"

# flake8 plugins
flake8 = ">=3.7.0"
flake8-bandit = ">=2.1.2"
flake8-black = ">=0.2.1"
flake8-bugbear = ">=20.11.1"
flake8-builtins = ">=1.5.3"
flake8-comprehensions = ">=3.3.1"
flake8-docstrings = ">=1.5.0"
flake8-string-format = ">=0.3.0"
flake8-tidy-imports = ">=4.2.1"
flake8-variables-names = ">=0.0.4"
pep8-naming = ">=0.11.1"
pydocstyle = ">=6.1.1"

# docs
mkdocs = ">=1.2.2"
mkdocs-coverage = ">=0.2.1"
mkdocs-macros-plugin = ">=0.5.0"
mkdocs-material = ">=6.2.7"
mkdocstrings = ">=0.16.2"

[tool.poetry.scripts]
auto-denoise = "auto_denoise.cli:main"

[tool.black]
line-length = 127
exclude = "tests/fixtures"

[tool.isort]
line_length = 127
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "auto_denoise"
include_trailing_comma = true
