[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-denoise"
version = "0.1.0"
description = "Unsupervised and self-supervised CNN denoising methods."
authors = [{name = "Nicola VIGANO", email = "nicola.vigano@cea.fr"}]
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "scipy",
    "tqdm",
    "matplotlib",
    "imageio",
    "scikit-image",
    "torch",
]

[project.optional-dependencies]
dev = [
    # dev
    "editables>=0.5",

    # maintenance
    "build>=1.2",
    "git-changelog>=2.4",
    "twine>=5.1; python_version < '3.13'",

    # ci
    "isort",
    "pyupgrade",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
    "flake8",

    # docs
    "black>=24.4",
    "mkdocs>=1.6",
    "mkdocs-gen-files>=0.4",
    "mkdocs-git-committers-plugin-2>=2.3",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://CEA-MetroCarac.github.io/auto-denoise"
Documentation = "https://CEA-MetroCarac.github.io/auto-denoise"
Changelog = "https://CEA-MetroCarac.github.io/auto-denoise/changelog"
Repository = "https://github.com/CEA-MetroCarac/auto-denoise"
Issues = "https://github.com/CEA-MetroCarac/auto-denoise/issues"
Discussions = "https://github.com/CEA-MetroCarac/auto-denoise/discussions"

[project.scripts]
autoden = "autoden.cli:main"
[tool.black]
line-length = 127
exclude = "tests/fixtures"

[tool.isort]
line_length = 127
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "autoden"
include_trailing_comma = true
